update insert queries
insert religions first
then all deities with their domain(s), and religion(s)

--- a/data-ingestion/notebook.ipynb
+++ b/data-ingestion/notebook.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Init"
+    "# Setup"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +75,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purge Neo4j"
+    "## Purge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,19 +93,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query Wikidata"
+    "## Query religions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3924 deities\n"
+      "Found 393 religions\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparql.setQuery(\"\"\"\n",
+    "SELECT DISTINCT ?subject ?subjectLabel\n",
+    "WHERE\n",
+    "{\n",
+    "{ ?subject wdt:P31 wd:Q9174 . } # instance_of religion\n",
+    "UNION\n",
+    "{ ?subject wdt:P31 wd:Q9134 . } # instance_of mythology\n",
+    "\n",
+    "SERVICE wikibase:label { bd:serviceParam wikibase:language \"en\" }\n",
+    "\n",
+    "?subject rdfs:label ?subjectLabel .\n",
+    "FILTER(LANG(?subjectLabel) = \"en\") # Filter for English labels\n",
+    "}\n",
+    "\"\"\")\n",
+    "\n",
+    "sparql.setReturnFormat(JSON)\n",
+    "religions = sparql.query().convert()\n",
+    "\n",
+    "print(f\"Found {len(religions['results']['bindings'])} religions\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query deities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3925 deities\n"
      ]
     }
    ],
@@ -139,45 +181,233 @@
     "\"\"\")\n",
     "\n",
     "sparql.setReturnFormat(JSON)\n",
-    "results = sparql.query().convert()\n",
+    "deities = sparql.query().convert()\n",
     "\n",
-    "print(f\"Found {len(results['results']['bindings'])} deities\")"
+    "print(f\"Found {len(deities['results']['bindings'])} deities\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 7080 deities\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparql.setQuery(\"\"\"\n",
+    "SELECT DISTINCT\n",
+    "  ?deity ?deityLabel\n",
+    "  ?deityOf ?deityOfLabel\n",
+    "  ?domainOfSaint ?domainOfSaintLabel\n",
+    "\n",
+    "  ?partOf ?partOfLabel\n",
+    "  ?worshippedBy ?worshippedByLabel\n",
+    "\n",
+    "  ?parentDeity ?parentDeityLabel\n",
+    "  ?parentPartOf ?parentPartOfLabel\n",
+    "  ?parentWorshippedBy ?parentWorshippedByLabel\n",
+    "\n",
+    "WHERE\n",
+    "{\n",
+    "  ?deity wdt:P31 ?parentDeity .                              # deites that are an instance of (P31) a parent deity\n",
+    "  ?parentDeity wdt:P279 wd:Q178885 .                         # parent deity that is a \"subclass of\" (P279) 'deity' (Q178885)\n",
+    "\n",
+    "  ?deity p:P31 ?deity_instance .                             # instance_of (Pax is an instance of a Romain Deity)\n",
+    "\n",
+    "  OPTIONAL { ?deity_instance pq:P642 ?deityOf . }            # \"of\" attribute of the instance_of (Romain Deity OF peace)\n",
+    "  OPTIONAL { ?deity wdt:P2925 ?domainOfSaint . }             # \"domain of saint or deity\" (P2925) (Mars is deity of War and Agriculture)\n",
+    "\n",
+    "  OPTIONAL { ?deity wdt:P361 ?partOf . }                     # deity is part of a religion or mythology\n",
+    "  OPTIONAL { ?deity wdt:P1049 ?worshippedBy . }              # deity is worshipped by of a religion or mythology\n",
+    "  OPTIONAL { ?parentDeity wdt:P361 ?parentPartOf . }         # 'part of' religion/mythology\n",
+    "  OPTIONAL { ?parentDeity wdt:P1049 ?parentWorshippedBy . }  # 'worshipped by' religion/mythology\n",
+    "\n",
+    "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"[AUTO_LANGUAGE],en\". }\n",
+    "#   FILTER (BOUND(?deityOf))\n",
+    "  \n",
+    "  FILTER (BOUND(?partOf) || BOUND(?worshippedBy) || BOUND(?parentPartOf) || BOUND(?parentWorshippedBy))\n",
+    "  \n",
+    "  ?deity rdfs:label ?deityLabel .\n",
+    "  FILTER(LANG(?deityLabel) = \"en\")\n",
+    "}\n",
+    "ORDER BY ?deityLabel\n",
+    "# LIMIT 1000\n",
+    "\"\"\")\n",
+    "\n",
+    "sparql.setReturnFormat(JSON)\n",
+    "deities = sparql.query().convert()\n",
+    "\n",
+    "print(f\"Found {len(deities['results']['bindings'])} deities\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Insert into Neo4J"
+    "## Insert data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert religions\n",
+    "with driver.session() as session:  \n",
+    "\n",
+    "  for row in religions[\"results\"][\"bindings\"]:    \n",
+    "      session.run(\"\"\"\n",
+    "                  MERGE (r:Religion { name: $name, entity: $entity })\n",
+    "\n",
+    "                  \"\"\", \n",
+    "        name=row[\"subjectLabel\"][\"value\"], \n",
+    "        entity=row[\"subject\"]['value']\n",
+    "      )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "with driver.session() as session:  \n",
     "\n",
-    "  for row in results[\"results\"][\"bindings\"]:    \n",
-    "      session.run(\"\"\"\n",
-    "                  MERGE (d:Deity { name: $deity_name, entity: $deity_entity, description: $deity_description })\n",
-    "\n",
-    "                  \"\"\", \n",
-    "        deity_name=row[\"deityLabel\"][\"value\"], \n",
-    "        deity_entity=row[\"deity\"]['value'],\n",
-    "        deity_description=row.get(\"deityDescription\", {}).get('value', '-')\n",
-    "      )\n",
+    "    for row in deities[\"results\"][\"bindings\"]:\n",
+    "        query = \"MERGE (d:Deity { name: $deity_name, entity: $deity})\"\n",
     "      \n",
-    "      if (\"domainOfSaintLabel\" in row):\n",
-    "          session.run(\"\"\"\n",
-    "              MERGE (deity:Deity { entity: $deity_entity })\n",
-    "              MERGE (domain:Domain { name: $domain_name, entity: $domain_entity }) \n",
-    "              MERGE (deity)-[:GOD_OF]->(domain)\n",
-    "              \"\"\", \n",
-    "                  domain_name=row[\"domainOfSaintLabel\"][\"value\"], \n",
-    "                  domain_entity=row[\"domainOfSaint\"]['value'],\n",
-    "                  deity_entity=row[\"deity\"]['value'])"
+    "        params = {\n",
+    "            \"deity_name\": row[\"deityLabel\"][\"value\"],\n",
+    "            \"deity\": row[\"deity\"][\"value\"],\n",
+    "        }\n",
+    "\n",
+    "      \n",
+    "        if (\"domainOfSaintLabel\" in row):\n",
+    "            query += \"\"\"\n",
+    "            MERGE (domainOfSaint:Domain { name: $domain_name, entity: $domain }) \n",
+    "            MERGE (d)-[:GOD_OF]->(domainOfSaint)\"\"\"\n",
+    "          \n",
+    "            params[\"domain_name\"]=row[\"domainOfSaintLabel\"][\"value\"]\n",
+    "            params[\"domain\"]=row[\"domainOfSaint\"]['value']\n",
+    "\n",
+    "      \n",
+    "        if (\"deityOf\" in row):\n",
+    "            query += \"\"\"\n",
+    "            MERGE (domain:Domain { name: $deityOf_name, entity: $deityOf }) \n",
+    "            MERGE (d)-[:GOD_OF]->(domain)\"\"\"\n",
+    "            \n",
+    "            params[\"deityOf_name\"]=row[\"deityOfLabel\"][\"value\"]\n",
+    "            params[\"deityOf\"]=row[\"deityOf\"]['value']\n",
+    "        \n",
+    "        religion = None\n",
+    "        religion_name = None\n",
+    "        if (\"worshippedBy\" in row):            \n",
+    "            religion = row[\"worshippedBy\"]['value']\n",
+    "            religion_name = row[\"worshippedByLabel\"][\"value\"]               \n",
+    "        elif(\"partOf\" in row):\n",
+    "            religion = row[\"partOf\"]['value']\n",
+    "            religion_name = row[\"partOfLabel\"][\"value\"]\n",
+    "        elif(\"parentWorshippedBy\" in row):\n",
+    "            religion = row[\"parentWorshippedBy\"]['value']\n",
+    "            religion_name = row[\"parentWorshippedByLabel\"][\"value\"]\n",
+    "        elif(\"parentPartOf\" in row):\n",
+    "            religion = row[\"parentPartOf\"]['value']\n",
+    "            religion_name = row[\"parentPartOfLabel\"][\"value\"]\n",
+    "    \n",
+    "        if religion and religion_name:\n",
+    "            query += \"\"\"\n",
+    "                MERGE (r:Religion { name: $religion_name, entity: $religion }) \n",
+    "                MERGE (d)-[:PART_OF]->(r)\"\"\"\n",
+    "                \n",
+    "            params[\"religion\"] = religion\n",
+    "            params[\"religion_name\"] = religion_name\n",
+    "    \n",
+    "        session.run(query, params)\n",
+    "      \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with driver.session() as session:  \n",
+    "\n",
+    "#   for row in deities[\"results\"][\"bindings\"]:    \n",
+    "#       session.run(\"\"\"\n",
+    "#                   MERGE (d:Deity { name: $deity_name, entity: $deity_entity})\n",
+    "#                   \"\"\", \n",
+    "#         deity_name=row[\"deityLabel\"][\"value\"], \n",
+    "#         deity_entity=row[\"deity\"]['value'],\n",
+    "#         # deity_description=row.get(\"deityDescription\", {}).get('value', '-')\n",
+    "#       )\n",
+    "      \n",
+    "#       if (\"domainOfSaintLabel\" in row):\n",
+    "#         session.run(\"\"\"\n",
+    "#           MERGE (deity:Deity { entity: $deity_entity })\n",
+    "#           MERGE (domain:Domain { name: $domain_name, entity: $domain_entity }) \n",
+    "#           MERGE (deity)-[:GOD_OF]->(domain)\"\"\", \n",
+    "#           deity_entity=row[\"deity\"]['value'],\n",
+    "#           domain_name=row[\"domainOfSaintLabel\"][\"value\"], \n",
+    "#           domain_entity=row[\"domainOfSaint\"]['value']\n",
+    "#         )\n",
+    "      \n",
+    "#       if (\"deityOf\" in row):\n",
+    "#         session.run(\"\"\"\n",
+    "#           MERGE (deity:Deity { entity: $deity_entity })\n",
+    "#           MERGE (domain:Domain { name: $domain_name, entity: $domain_entity }) \n",
+    "#           MERGE (deity)-[:GOD_OF]->(domain)\"\"\", \n",
+    "#           deity_entity=row[\"deity\"]['value'],\n",
+    "#           domain_name=row[\"deityOfLabel\"][\"value\"], \n",
+    "#           domain_entity=row[\"deityOf\"]['value']\n",
+    "#         )    \n",
+    "      \n",
+    "#       if (\"worshippedBy\" in row):\n",
+    "#         session.run(\"\"\"\n",
+    "#           MERGE (deity:Deity { entity: $deity_entity })\n",
+    "#           MERGE (r:Religion { name: $religion_name, entity: $religion_entity }) \n",
+    "#           MERGE (deity)-[:PART_OF]->(r)\"\"\",\n",
+    "#           deity_entity=row[\"deity\"]['value'],\n",
+    "#           religion_name=row[\"worshippedByLabel\"][\"value\"], \n",
+    "#           religion_entity=row[\"worshippedBy\"]['value']\n",
+    "#         )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with driver.session() as session:  \n",
+    "\n",
+    "#   for row in deities[\"results\"][\"bindings\"]:    \n",
+    "#       session.run(\"\"\"\n",
+    "#                   MERGE (d:Deity { name: $deity_name, entity: $deity_entity, description: $deity_description })\n",
+    "\n",
+    "#                   \"\"\", \n",
+    "#         deity_name=row[\"deityLabel\"][\"value\"], \n",
+    "#         deity_entity=row[\"deity\"]['value'],\n",
+    "#         deity_description=row.get(\"deityDescription\", {}).get('value', '-')\n",
+    "#       )\n",
+    "      \n",
+    "#       if (\"domainOfSaintLabel\" in row):\n",
+    "#           session.run(\"\"\"\n",
+    "#               MERGE (deity:Deity { entity: $deity_entity })\n",
+    "#               MERGE (domain:Domain { name: $domain_name, entity: $domain_entity }) \n",
+    "#               MERGE (deity)-[:GOD_OF]->(domain)\n",
+    "#               \"\"\", \n",
+    "#                   domain_name=row[\"domainOfSaintLabel\"][\"value\"], \n",
+    "#                   domain_entity=row[\"domainOfSaint\"]['value'],\n",
+    "#                   deity_entity=row[\"deity\"]['value'])"
    ]
   }
  ],
